cluster compute changes
